# crontest

./: crontest.sh  pyproject.toml  readme.md
crontest/: crontest.py
tests/: test_integration.py
tests/redundsource/: five.csv  three.csv  two.csv
tests/sourcedir/: docfour.csv  docone.csv  doctwo.csv
tests/targetdir/: doctwo.csv
